--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
