--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 # dependencies
 /node_modules
+/client/node_modules
+/server/node_modules
 /.pnp
 .pnp.js
+/server/cosc4353-35f65-firebase-adminsdk-5u4y6-655663d6f4.json
 
 # testing
 /coverage
