--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@babel/preset-react": "^7.24.7",
@@ -29,7 +30,9 @@
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "react-scripts": "^5.0.1",
-    "react-test-renderer": "^18.3.1"
+    "react-test-renderer": "^18.3.1",
+    "text-encoding": "^0.7.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
@@ -38,22 +41,22 @@
     "@babel/preset-env": "^7.24.8",
     "babel-jest": "^27.5.1",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
     "supertest": "^7.0.0"
   },
   "jest": {
-    "testEnvironment": "jest-environment-jsdom",
+    "testEnvironment": "node",
     "transform": {
-      "\\.js$": [
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.jsx?$": [
         "babel-jest",
         {
           "presets": [
             "@babel/preset-env",
             "@babel/preset-react"
-          ]
-        },
-        {
+          ],
           "plugins": [
-            "@babel/transform-runtime",
+            "@babel/plugin-transform-runtime",
             "babel-plugin-transform-import-meta"
           ]
         }
@@ -64,6 +67,17 @@
     ],
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
-    }
+    },
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "clover"
+    ],
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
