--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,12 @@
     "firebase-admin": "^12.2.0",
     "http-errors": "~1.6.3",
     "jest-environment-jsdom": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.14",
     "pug": "2.0.0-beta11",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.3.1",
