--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-validator": "^7.1.0",
     "firebase-admin": "^12.2.0",
     "http-errors": "~1.6.3",
     "jest-environment-jsdom": "^29.7.0",
