--- a/server/package.json
+++ b/server/package.json
@@ -25,12 +25,14 @@
     "firebase-admin": "^12.2.0",
     "http-errors": "~1.6.3",
     "jest-environment-jsdom": "^29.7.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.5",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.14",
+    "pdfkit": "^0.15.0",
     "pug": "2.0.0-beta11",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.3.1",
@@ -44,7 +46,6 @@
     "@babel/preset-env": "^7.24.8",
     "babel-jest": "^27.5.1",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.0.0",
     "semver": "^7.6.3",
     "supertest": "^7.0.0"
   },
